<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Labels and Button Texts: -->
    <string name="add_contact">Добавить контакт</string>
    <string name="add_cell">+1 камера</string>
    <string name="prisoner_name_label">Имя</string>
    <string name="prisoner_username_label">Логин</string>
    <string name="prisoner_password_label">Пароль</string>
    <string name="confirm_password_label">Повторите пароль</string>
    <string name="prisoner_info_label">Любая другая информация:</string>
    <string name="jail_label">Тюрьма:\u0020</string>
    <string name="cell_number_label">№ камеры:\u0020</string>
    <string name="specify_cell">Укажите камеру:</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_out">Выход</string>
    <string name="find_prisoners">Найти сокамерников!</string>

    <plurals name="delete_arests_title">
        <item quantity="one">Убрать арест?</item>
        <item quantity="other">Убрать аресты?</item>
    </plurals>

    <plurals name="delete_arests_msg_1">
        <item quantity="one">
            Вы собираетесь удалить %d арест.&lt;br/>
        </item>

        <item quantity="two">
            Вы собираетесь удалить %d ареста.&lt;br/>
        </item>

        <item quantity="few">
            Вы собираетесь удалить %d ареста.&lt;br/>
        </item>

        <item quantity="other">
            Вы собираетесь удалить %d арестов.&lt;br/>
        </item>
    </plurals>

    <plurals name="delete_arests_msg_2">
        <item quantity="one">
            &lt;b>Расписание этого ареста также будет удалено.&lt;/b>
            Вашем сокамерникам, сидевшим с Вами в этот раз, не отобразится ваш профиль.
        </item>

        <item quantity="other">
            &lt;b>Сопутствующие расписания также будут удалены.&lt;/b>
            Вашем сокамерникам, сидевшим с Вами во время данных арестов, не отобразится ваш профиль.
        </item>
    </plurals>

    <!-- Notifications (Authorization): -->
    <string name="login_failed_msg">Не удалось выполнить вход: ошибка сети.</string>
    <string name="signup_failed_msg">Не удалось зарегистрироваться: ошибка сети.</string>
    <string name="invalid_username_title">Недопустимый логин</string>
    <string name="username_rules">
        Логин состоит хотя бы из 3 символов. В начале и в конце не должно быть пробелов.
    </string>
    <string name="invalid_password_title">Недопустимый пароль</string>
    <string name="password_rules">
        Пароль состоит хотя бы из 3 символов. В начале и в конце не должно быть пробелов.
    </string>
    <string name="auth_needs_internet_msg">
        Для того, чтобы войти или зарегистрироваться, нужно соединение с интернетом.
    </string>
    <string name="wrong_credentials_title">Не удалось войти</string>
    <string name="username_not_exist_msg">Имя пользователя введено неверно.</string>
    <string name="password_not_match_msg">Пароль введён неверно.</string>
    <string name="username_taken_msg">"%s" уже занято. Логин должен быть уникальным.</string>
    <string name="password_not_confirmed_msg">Пароли не совпадаюют.</string>

    <!-- Notifications (Arests): -->
    <string name="arests_empty">
        Укажите информацию о Ваших задержаниях, чтобы Sviazeń нашёл Ваших сокамерников.
    </string>
    <string name="add_arest_failed_title">
        Не удалось добавить арест
    </string>
    <string name="update_arest_failed_title">
        Не удалось обновить даты ареста
    </string>
    <string name="arests_need_internet_msg">
        Чтобы загрузить список Ваших арестов, приложению нужно соединение с интернетом.
    </string>
    <string name="get_arests_failed_msg">
        Не удалось загрузить список арестов: ошибка сети.
    </string>
    <string name="arests_intersect_msg">
        Введённый Вами промежуток дат пересекается с Вашим арестом %s - %s.
    </string>
    <string name="delete_arests_failed_title">Удаление не удалось</string>
    <string name="delete_arests_failed_msg">Возникла ошибка сети.</string>
    <string name="delete_arests_needs_internet">
        Для удаления арестов нужно подключение к интернету.
    </string>

    <!-- Notifications (Other): -->
    <string name="save_prisoner_success_msg">Информация профиля сохранена.</string>
    <string name="save_prisoner_error_msg">Не удалось сохранить информацию профиля.</string>
    <string name="get_schedule_failed_msg">Не удалось получить Ваше расписание.</string>
    <string name="update_schedule_failed_msg">Не удалось сохранить расписание.</string>
    <string name="update_schedule_success_msg">Расписание сохранено.</string>
    <string name="cell_error_title">Дорогой пользователь!</string>
    <string name="cell_commonpart_msg">
        Данный редактор предлагает Вам выбрать тюрьму из списка.
    </string>
    <string name="cell_need_internet_msg">
        Чтобы получить список тюрем в первый раз, требуется соединение с интернетом.
    </string>
    <string name="cell_error_msg">
        Пиложение попыталось получить список тюрем с сервера, но возникла ошибка.
    </string>
    <string name="add_cell_failed_msg">Не удалось добавить камеру: ошибка сети.</string>
    <string name="update_cell_failed_msg">Не удалось обновить камеру: ошибка сети.</string>
    <string name="add_cell_success_msg">
        Теперь Вы можете указать, в какие дни вы были в камере №%d в %s
    </string>
    <string name="delete_cell_success_msg">
        Информация о Вашем содержании в камере удалена.
    </string>
    <string name="cell_duplicate_msg">%s в этом расписании уже есть.</string>
    <string name="update_cell_succeeded_msg">Адрес камеры заменён.</string>
    <string name="delete_cell_failed_msg">Не удалось удалить сведения.</string>
    <string name="save_prisoner_needs_internet_msg">
        Чтобы сохранить информацию Вашего профиля, нужно соединение с интернетом.
    </string>

    <!-- Navigation Labels: -->
    <string name="auth_navlabel">Авторизация</string>
    <string name="profile_navlabel">Ваш профиль</string>
    <string name="arests_navlabel">Список арестов</string>
    <string name="schedule_navlabel">Дни ареста</string>

    <!-- Other: -->
    <string name="delete_cell_alert_title">Удалить камеру?</string>
    <string name="delete_cell_alert_message">
        Это удалит всю информацию о Вашем содержании в камере №%d, %s.
    </string>
    <string name="prisoner_default_name">Без имени</string>
    <string name="username_info">
        Логин не отображается другим пользователям - он нужен лишь для авторизации.
        Войдите в приложение, используя логин,
        а потом укажите Ваше имя (кличку, погоняло, секретную фразу и т. д.),
        по которому Ваши сокамерники смогут узнать Вас.
        \nНе забывайте Ваш логин!
    </string>
    <string name="password_info">
        Сочетание символов (минимум 3) для входа в приложение. Не забывайте Ваш пароль!
    </string>

    <string name="edit_interrupt_title">Прервать редактирование?</string>
    <string name="edit_interrupt_message">
        У Вас есть несохранённые изменения. Уйдя с экрана, Вы можете потерять их.
    </string>
    <string name="edit_interrupt_yes">Перейти</string>
    <string name="edit_interrupt_no">Остаться</string>

</resources>