<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_label"
        app:hintTextAppearance="@style/auth_textinput_hint_textappear"
        android:theme="@style/auth_textinput_theme" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="?colorPrimary"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtvSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        android:textAllCaps="true"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/sign_up"
        android:background="@drawable/shape_roundrect_8"
        android:backgroundTint="@color/onhover_highlighted_accent" />


    <TextView
        android:id="@+id/txtvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:textColor="@color/design_default_color_error"
        android:text="@string/password_rules"
        android:visibility="gone" />

</LinearLayout>