<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp" >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:columnCount="2" >

                <ImageView
                    android:id="@+id/imgvLogo"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_columnSpan="2" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="16dp"
                    android:hint="@string/prisoner_username_label"
                    app:hintTextAppearance="@style/auth_textinput_hint_textappear"
                    android:theme="@style/auth_textinput_theme" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="?colorPrimary"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgvUsernameInfo"
                    android:layout_gravity="center_vertical"
                    style="@style/auth_credential_info" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prisoner_password_label"
                    app:hintTextAppearance="@style/auth_textinput_hint_textappear"
                    android:theme="@style/auth_textinput_theme" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?colorPrimary"
                        android:textSize="18sp"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgvPasswordInfo"
                    android:layout_gravity="center_vertical"
                    style="@style/auth_credential_info" />

            </GridLayout>

        </ScrollView>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <Button
                android:id="@+id/buLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="?colorPrimary"
                android:singleLine="true"
                android:textColor="?backgroundColor"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/buSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="?backgroundColor"
                android:singleLine="true"
                android:textColor="?colorPrimary"
                android:text="@string/sign_up" />

        </LinearLayout>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/prBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/primary_tinted_progressbar_theme"
        android:visibility="gone" />

</FrameLayout>